fix scrollbar on settings page to only show when needed

--- a/src/styles/Settings.module.scss
+++ b/src/styles/Settings.module.scss
@@ -14,7 +14,7 @@
   background-color: #f7f7f7;
   width: 170px;
   padding: 40px;
-  overflow-x: scroll;
+  overflow-y: auto;
 
   .back {
     font-size: 14px;
